# ai-code-assistant

./: CLAUDE.md  INTEGRATION_TEST_RESULTS.md  README.md  SETUP_COMPLETE.md  go.mod  go.sum  main.go  start_server.sh  test_agent.sh
agent/: agent.go
api/: .env.example  .env.sample  .gitignore  ENVIRONMENT.md  README.md  dev_output.txt  go.mod  go.sum  main.go  main.py  output.txt  package.json  pnpm-lock.yaml  project_context.json  pyproject.toml  pytest.ini  run_tests.py  test_dev_workflow.sh  test_interactive.sh  test_loop_manager.sh  test_multiagent.sh  test_single_loop.sh  test_tools.sh
api/app/: config.py
api/app/agents/: react_agent.py  tools.py
api/app/api/: auth.py  github.py  models.py  projects.py  streaming.py  tokens.py  vercel.py
api/app/database/: connection.py  models.py  service.py
api/app/prompts/: react_prompts.py
api/app/utils/: docker_route.py
api/cmd/: main.go
api/cmd/multiagent/: main.go
api/cmd/server/: main.go
api/data/: database.db.wal
api/internal/pkg/agents/: agent.go  coordinator.go  loop_manager.go
api/internal/pkg/database/: projects.go
api/internal/pkg/docker/: service.go
api/internal/pkg/llm/: service.go
api/internal/pkg/logging/: logger.go
api/internal/pkg/templates_manager/: manager.go
api/internal/pkg/tools/: tools.go
api/prompts/: code_editing.txt  devops.txt  react.txt  supervisor.txt  system.txt
api/server/: http.go
api/tests/: README.md  conftest.py  test_auth.py  test_database_service.py  test_integration.py  test_main.py  test_models_tokens.py  test_projects.py  test_streaming.py
(+84 files in other folders)
