[project]
name = "api"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain",
    "langchain_openai",
    "websockets",
    "aiofiles",
    "duckdb",
    "pydantic",
    "uuid",
    "datetime",
    "sh",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "gitpython>=3.1.45",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "coverage>=7.0.0",
]
